--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // HTTP 라이브러리
+    implementation 'com.android.volley:volley:1.1.1'
+
+    // JSON 변환 라이브러리
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
