--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     // JSON 변환 라이브러리
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:design:28.0.0'
+
+    // GridView 라이브러리
+    implementation 'in.srain.cube:grid-view-with-header-footer:1.0.12'
 }
