--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+    // 이미지 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // recyclerview 라이브러리
+    implementation 'com.tonicartos:stickygridheaders:1.0.1'
+
     // JSON 변환 라이브러리
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:design:28.0.0'
